--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,9 +4,9 @@
     <%= render 'shared/error_messages', object: f.object %>
     <div class="flex flex-wrap md:justify-between">
       <div class="w-full md:w-3/4">
-        <%= f.text_area :body, class: 'input border-gray-400 w-full', row: 4, placeholder: Comment.human_attribute_name(:body) %>
+        <%= f.text_area :body, class: 'border border-gray-400 rounded-[10px] w-full p-2', rows: 3, placeholder: Comment.human_attribute_name(:body) %>
       </div>
-      <div class="flex w-full md:w-1/4 justify-center md:justify-end">
+      <div class="flex w-full md:w-1/4 justify-center md:justify-end items-center">
         <%= f.submit t('helpers.submit.comment'), class: 'bg-point hover:bg-yellow-400 shadow-xl rounded-[10px] px-3 py-2 h-12' %>
       </div>
     </div>
