--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -33,7 +33,7 @@
           <p class="font-bold border-dotted border-b-4 border-point"><%= @post.title %>
           <p class="font-bold text-left">お酒：<%= @post.alcohol %></p>
           <p class="font-bold text-left">おつまみ：<%= @post.appetizer %></p>
-          <p class="text-left text-sm"><%= @post.body %></p>
+          <%= simple_format(@post.body, { class: 'text-left text-sm' }, wrapper_tag: "div") %>
           <div class="flex justify-between">
             <div class="flex flex-row items-center">
               <div class="border border-gray-500 rounded-[10px] text-base text-gray-500 px-2 mr-1 h-7">
