--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,8 +2,11 @@
   <div class="border bg-amber-50 shadow-xl rounded-lg p-4 h-full">
     <div class="flex flex-row justify-between">
       <div class="flex flex-row items-center">
-        <%= display_user_avatar(post.user) %>
-        <%= link_to post.user.name, post.user == current_user ? profile_path : user_path(post.user), class: 'hover:text-yellow-400' %>
+        <%= link_to post.user == current_user ? profile_path : user_path(post.user) do %>
+          <div class="flex items-center hover:text-yellow-400">
+            <%= display_user_avatar(post.user) %><%= post.user.name %>
+          </div>
+        <% end %>
       </div>
       <%= l post.created_at, format: :long %>
     </div>
