--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title, @post.title) %>
 <div class="mx-auto w-3/4 lg:w-5/6 max-w-screen-lg">
   <h1 class="text-lg sm:text-2xl font-bold my-20 text-center"><%= t('.title') %></h1>
-  <div class="flex flex-wrap md:justify-between mb-5 lg:pr-10 items-center">
+  <div class="flex flex-wrap md:justify-between mb-10 md:mb-2 lg:pr-10 items-center">
     <div class="flex justify-center w-full lg:w-1/2 lg:p-5">
       <%= image_tag @post.post_image.url, size: '400x300', class:'mb-5' %>
     </div>
@@ -48,7 +48,7 @@
     </div>
   </div>
   <% unless @post.address.blank? %>
-    <div class="flex justify-center mb-5">
+    <div class="flex justify-center mb-10">
       <div id="map" data-latitude="<%= @post.latitude %>" data-longitude="<%= @post.longitude %>" data-address="<%= @post.address %>" style="height: 500px; width: 800px"></div>
     </div>
   <% end %>
