--- a/app/views/tops/_explanation.html.erb
+++ b/app/views/tops/_explanation.html.erb
@@ -33,7 +33,7 @@
         <%= link_to '投稿詳細', posts_path, class: 'text-lg font-bold bg-yellow-400 rounded-lg shadow-lg hover:bg-yellow-300 px-4 py-2 mx-auto' %>
         <div class="text-left py-3 xl:py-10 mx-auto">
           <p>投稿一覧ページから投稿を選択すると、詳細情報を確認できます。</p>
-          <p class="mb-5">投稿の編集・削除、X共有、いいね、店の位置確認、コメントができます。</p>
+          <p class="mb-5">投稿の編集・削除、X共有、LINE共有、いいね、店の位置確認、コメントができます。</p>
           <i class="fa-solid fa-triangle-exclamation text-yellow-400"></i>投稿の編集・削除、いいね、コメントは、ログインが必要です
         </div>
       </div>
