--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,23 +13,23 @@
     <div class="flex items-center justify-center w-full h-80 overflow-hidden">
       <%= display_post_image(post) %>
     </div>
-    <div class="flex justify-between">
+    <div class="flex justify-between mb-2">
       <div class="space-y-2">
         <%= link_to post.title, post_path(post), class: 'font-bold hover:text-yellow-400' %>
         <p class="font-bold mr-1">お酒 <i class="fa-solid fa-wine-glass"></i>：<%= post.alcohol %></p>
         <p class="font-bold mr-1">おつまみ <i class="fa-solid fa-utensils"></i>：<%= post.appetizer %></p>
-        <div class="flex flex-row">
-          <div class="border border-gray-500 bg-white rounded-[10px] text-gray-500 px-2 mr-1">
-            <%= post.alcohol_genre.genre %>
-          </div>
-          <div class="border border-gray-500 bg-white rounded-[10px] text-gray-500 px-2">
-            <%= post.appetizer_genre.genre %>
-          </div>
+      </div>
+    </div>
+    <div class="flex justify-between">
+      <div class="flex">
+        <div class="border border-gray-500 bg-white rounded-[10px] text-gray-500 px-2 mr-1">
+          <%= post.alcohol_genre.genre %>
+        </div>
+        <div class="border border-gray-500 bg-white rounded-[10px] text-gray-500 px-2">
+          <%= post.appetizer_genre.genre %>
         </div>
       </div>
-      <div class="flex flex-col-reverse">
-        <%= display_like_button(post) %>
-      </div>
+      <%= display_like_button(post) %>
     </div>
   </div>
 </div>
